# data_cpp

./: .clang-tidy  .gitignore  23_lambda_anatomy  61_test  CMakeLists.txt  DRIVER_TUTORIAL_PLAN.md  README.md  _config.yml  array_stack_vs_heap  array_unique_ptr_test  auto_ref_vs_forward_ref  copy_vs_move_test  demo_drivers_plan.md  function_array_uniqueptr  index.md  ranges_foreach_uniqueptr  sbrk_demo  vector_ptr_copy_test  vector_wrap_test  weak_proof  why_care_about_move
.agent/rules/: steps.md
.github/workflows/: pages.yml
demo_01_read_cr3/: Makefile  cr3_driver.c  worksheet.md
demo_02_extract_indices/: Makefile  indices_driver.c  worksheet.md
demo_03_read_entry/: Makefile  entry_driver.c  worksheet.md
demo_04_check_present/: Makefile  present_driver.c  worksheet.md
demo_05_check_huge/: Makefile  huge_driver.c  worksheet.md
demo_06_extract_address/: Makefile  addr_driver.c  worksheet.md
demo_07_walk_4kb/: Makefile  walk4kb_driver.c  worksheet.md
demo_08_walk_2mb/: Makefile  walk2mb_driver.c  worksheet.md
demo_09_walk_1gb/: Makefile  walk1gb_driver.c  worksheet.md
demo_10_compare_va/: Makefile  va_driver.c  worksheet.md
demo_11_dump_pml4/: Makefile  pml4_driver.c  worksheet.md
demo_12_process_cr3/: Makefile  pid_driver.c  worksheet.md
demo_13_zone_info/: Makefile  worksheet.md  zone_driver.c
demo_14_page_flags/: Makefile  flags_driver.c  worksheet.md
demo_15_vma_walk/: Makefile  vma_driver.c  worksheet.md
demo_16_slab_info/: Makefile  slab_driver.c  worksheet.md
demo_17_buddy_alloc/: Makefile  buddy_driver.c  worksheet.md
demo_18_tlb_flush/: Makefile  tlb_driver.c  worksheet.md
demo_19_cow_demo/: Makefile  cow_driver.c  worksheet.md
demo_20_swap_info/: Makefile  swap_driver.c  worksheet.md
docs/: 20_stl_algorithms_worksheet.md  21_for_each_deep_dive.md  22_simd_parallel_worksheet.md  24_reduce_transform_errors.md  25_transform_even_odd_derivation.md  25_transform_even_odd_errors.md  26_transform_parity_derivation.md  27_equal_mismatch_derivation.md  28_ranges_generate_derivation.md  29_ranges_find_derivation.md  30_vector_vs_ranges_notes.md  31_iota_transform_derivation.md  32_transform_reduce_derivation.md  33_ranges_views_memory_derivation.md  34_view_abstraction_worksheet.md  58_constexpr_derivation.md  Lesson1_planning.md  containers_worksheet.md  error_report.md  project_proposal.md  reassign_plan.md  transformation_plan.md
exercises_mm/: Makefile  buddy_fragment.c  gfp_context_bug.c  page_refcount_bug.c  worksheet.md
kernel_module/: .modules.order.cmd  .pagewalk_driver.ko.cmd  .pagewalk_driver.mod.cmd  .pagewalk_driver.mod.o.cmd  .pagewalk_driver.o.cmd  Makefile  cpufeatures.h  kvm_host.h  modules.order  mshyperv.h  msr-index.h  nospec-branch.h  pagewalk.asm  pagewalk_driver.c  pagewalk_driver.ko  pagewalk_driver.mod  pagewalk_driver.mod.c  worksheet.md
kernel_module_asid/: Makefile  asid_driver.c  worksheet.md
kernel_module_gap_test/: Makefile  gap_test.c
kernel_module_raw/: Makefile  answers.md  asm_demo  asm_demo.c  asm_operands  asm_operands.c  direct_map_lesson.md  kernel_memory_layout.md  mistakes_report.md  process_a.c  process_b.c  production_driver_plan.md  prove_direct_map.c  raw_pagewalk.c  session_mistakes.md  tlb_demo.md
kernel_module_reloc_test/: Makefile  reloc_test.asm  reloc_test.c  reloc_test.rel
src/: 00_self_critique_reminder.md  20_stl_algorithms_worksheet.cpp  21_for_each_deep_dive.cpp  21_for_each_puzzle.cpp  21_for_each_teach.cpp  22_simd_parallel_puzzle.cpp  23_lambda_anatomy.cpp  24_reduce_demo.cpp  25_transform_even_odd.cpp  26_transform_parity.cpp  27_equal_mismatch.cpp  28_ranges_generate.cpp  29_ranges_find.cpp  30_vector_vs_ranges.cpp  31_iota_transform.cpp  32_transform_reduce.cpp  33_ranges_views_memory.cpp  34_view_abstraction.cpp  35_iota_view_formula.cpp  36_smart_pointer_factory.cpp  36_smart_pointer_factory.md  37_struct_class_init.cpp  37_struct_class_init.md  38_functor_vs_lambda.cpp  38_functor_vs_lambda.md  39_auto_type_deduction.cpp  39_auto_type_deduction.md  40_error_report.md  40_person_name_compare.cpp  40_person_name_compare.md  40_person_name_compare_worksheet.cpp  41_block_001_virtual_roast.cpp  41_inheritance_virtual.cpp  41_inheritance_virtual.md  41_virtual_dispatch_proofs.cpp  42_no_virtual_assembly.cpp  42_no_virtual_assembly.s  43_nonvirtual_calls_virtual.cpp  43_nonvirtual_calls_virtual.s  44_assembly_virtual_dispatch.s  (+117 more)
