cmake_minimum_required(VERSION 3.28)
project(lecpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Compiler warnings (GCC 14 / Clang 19)
add_compile_options(
    -Wall -Wextra -Wpedantic -Werror
    -Wshadow -Wconversion -Wsign-conversion
    -Wnon-virtual-dtor -Wold-style-cast
    -Wcast-align -Wunused -Woverloaded-virtual
    -Wnull-dereference -Wdouble-promotion
    -Wformat=2 -Wimplicit-fallthrough
)

# Debug build: enable sanitizers
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
    add_link_options(-fsanitize=address,undefined)
endif()

add_executable(main src/main.cpp)
add_executable(containers_worksheet src/containers_worksheet.cpp)
add_executable(20_stl_algorithms src/20_stl_algorithms_worksheet.cpp)
add_executable(21_for_each_deep_dive src/21_for_each_deep_dive.cpp)
add_executable(21_for_each_teach src/21_for_each_teach.cpp)
add_executable(21_for_each_puzzle src/21_for_each_puzzle.cpp)
add_executable(22_simd_parallel_puzzle src/22_simd_parallel_puzzle.cpp)
add_executable(23_lambda_anatomy src/23_lambda_anatomy.cpp)
add_executable(24_reduce_demo src/24_reduce_demo.cpp)
add_executable(25_transform_even_odd src/25_transform_even_odd.cpp)
add_executable(26_transform_parity src/26_transform_parity.cpp)
add_executable(27_equal_mismatch src/27_equal_mismatch.cpp)
add_executable(28_ranges_generate src/28_ranges_generate.cpp)
add_executable(29_ranges_find src/29_ranges_find.cpp)
add_executable(30_vector_vs_ranges src/30_vector_vs_ranges.cpp)
add_executable(31_iota_transform src/31_iota_transform.cpp)
add_executable(32_transform_reduce src/32_transform_reduce.cpp)
add_executable(33_ranges_views_memory src/33_ranges_views_memory.cpp)
add_executable(34_view_abstraction src/34_view_abstraction.cpp)
add_executable(35_iota_view_formula src/35_iota_view_formula.cpp)
add_executable(36_smart_pointer_factory src/36_smart_pointer_factory.cpp)
add_executable(37_struct_class_init src/37_struct_class_init.cpp)
add_executable(38_functor_vs_lambda src/38_functor_vs_lambda.cpp)
add_executable(39_auto_type_deduction src/39_auto_type_deduction.cpp)
add_executable(40_person_name_compare src/40_person_name_compare.cpp)
add_executable(41_inheritance_virtual src/41_inheritance_virtual.cpp)
add_executable(41_block_001 src/41_block_001_virtual_roast.cpp)
add_executable(41_virtual_proofs src/41_virtual_dispatch_proofs.cpp)
add_executable(46_template_power src/46_template_power.cpp)
add_executable(47_count_equal_items src/47_count_equal_items.cpp)
add_executable(48_abbreviated_template src/48_abbreviated_template.cpp)
add_executable(49_template_vs_auto_asm src/49_template_vs_auto_asm.cpp)
add_executable(50_abbreviated_duck_typing src/50_abbreviated_duck_typing.cpp)
add_executable(51_missing_size_error src/51_missing_size_error.cpp)
add_executable(52_all_syntax_versions src/52_all_syntax_versions.cpp)
add_executable(53_cpp_templates_worksheet src/53_cpp_templates_worksheet.cpp)
add_executable(54_recursive_template_asm src/54_recursive_template_asm.cpp)
add_executable(55_template_dimensions src/55_template_dimensions.cpp)
add_executable(56_n_dimensional_logic src/56_n_dimensional_logic.cpp)
add_executable(58_constexpr_computation src/58_constexpr_computation.cpp)
add_executable(59_constexpr_compiler_interpreter src/59_constexpr_compiler_interpreter.cpp)
find_package(TBB QUIET)
if(TBB_FOUND)
    target_link_libraries(22_simd_parallel_puzzle TBB::tbb)
    target_compile_definitions(22_simd_parallel_puzzle PRIVATE HAS_TBB=1)
endif()
